# rivet

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml
.codex/: config.toml
.github/workflows/: codeql.yml  complexity-sarif.yml  performance.yml  test.yml
.trunk/: trunk.yaml
benchmarks/: README.md
crates/rivet-cli/: Cargo.toml
crates/rivet-cli/src/: main.rs
crates/rivet-core/: Cargo.toml
crates/rivet-core/src/: analysis.rs  analyzer.rs  config.rs  error.rs  language.rs  lib.rs  parser.rs  types.rs
crates/rivet-core/src/languages/: mod.rs
crates/rivet-core/src/metrics/: complexity.rs  halstead.rs  loc.rs  mod.rs  registry.rs
crates/rivet-core/src/output/: mod.rs
crates/rivet-core/src/output/snapshots/: rivet_core__output__tests__project_analysis_fixture_suite_json.snap  rivet_core__output__tests__project_analysis_fixture_suite_sarif.snap
crates/rivet-core/src/parser/: mod.rs
crates/rivet-core/src/plugin/: host.rs  manifest.rs  mod.rs
crates/rivet-lsp/: Cargo.toml
crates/rivet-lsp/benches/: cached_reads.rs
crates/rivet-lsp/src/: lib.rs  main.rs  state.rs
crates/rivet-mcp/: Cargo.toml
crates/rivet-mcp/src/: lib.rs  main.rs
crates/rivet-node/: Cargo.toml  build-package.mjs  index.d.ts  index.js  package.json
crates/rivet-node/src/: lib.rs
crates/rivet-plugin-sdk/: Cargo.toml
crates/rivet-plugin-sdk/example_plugins/: function_name_length.rs
crates/rivet-plugin-sdk/src/: lib.rs
crates/rivet-python/: Cargo.toml  pyproject.toml  rivet_rs.pyi
crates/rivet-python/src/: lib.rs
crates/rivet-runtime/: Cargo.toml
crates/rivet-runtime/benches/: cache_roundtrip.rs
crates/rivet-runtime/src/: lib.rs
dev/: test.sh
docs/adr/: 0002-universal-parsing-with-tree-sitter.md  0003-wasm-based-plugin-system-via-extism.md  0004-pure-rust-core-with-io-owning-consumers.md  0005-query-based-language-behavior-definition.md  0006-plugin-runtime-release-gated-pending-upstream-remediation.md  0007-standardize-agent-ergonomic-cli-design.md  README.md
docs/core/: editor_setup.md  performance.md  plugin-interface.schema.json  plugin_development.md  system_design.md
queries/c/: control_flow.scm  operands.scm
queries/cpp/: functions.scm  operators.scm
queries/csharp/: control_flow.scm  functions.scm  operands.scm  operators.scm
queries/go/: control_flow.scm  functions.scm  operands.scm  operators.scm
queries/java/: control_flow.scm  functions.scm  operands.scm
queries/javascript/: control_flow.scm  functions.scm
queries/kotlin/: control_flow.scm  functions.scm  operands.scm  operators.scm
queries/php/: control_flow.scm  functions.scm  operands.scm  operators.scm
queries/python/: control_flow.scm  functions.scm  operands.scm  operators.scm
queries/ruby/: control_flow.scm  functions.scm  operands.scm  operators.scm
queries/rust/: control_flow.scm  functions.scm  operands.scm  operators.scm
queries/typescript/: operands.scm  operators.scm
tests/fixtures/: binding_golden_cases.json
tests/fixtures/cpp/: simple.cpp
tests/fixtures/csharp/: Simple.cs
tests/fixtures/go/: simple.go
tests/fixtures/java/: Simple.java
tests/fixtures/javascript/: simple.js
tests/fixtures/kotlin/: Simple.kt
tests/fixtures/php/: simple.php
tests/fixtures/python/: simple.py
tests/fixtures/ruby/: simple.rb
tests/fixtures/rust/: simple.rs
tests/fixtures/typescript/: simple.ts
tests/node/: package.test.mjs  runtime.test.mjs
tests/python/: test_bindings.py
