[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["yu-iskw"]
repository = "https://github.com/yu-iskw/rivet"

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"

# Parallelism / IO
rayon = "1"
walkdir = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cognitive_complexity = "deny"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
