[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["yu-iskw"]
repository = "https://github.com/yu-iskw/rivet"
description = "AI-agent-native code complexity analyzer"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
ignore = "0.4.25"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
toml = "0.8.23"
tree-sitter = "0.25.10"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
extism-pdk = "0.6.0"
napi = "2.2.0"
napi-derive = "2.2.0"
pyo3 = { version = "0.19.5", features = [
  "extension-module",
  "auto-initialize",
  "serde",
] }

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cognitive_complexity = "deny"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
