[package]
name = "rivet-cli"
version = "0.1.0"
description = "CLI for the Rivet code complexity analyzer."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "rivet"
path = "src/main.rs"

[dependencies]
rivet-core = { path = "../rivet-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
