[package]
name = "rivet-core"
version = "0.1.0"
description = "Pure Rust library for code complexity analysis."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }

[features]
default = ["lang-popular"]
lang-popular = ["lang-rust", "lang-python"]
lang-rust = ["dep:tree-sitter-rust"]
lang-python = ["dep:tree-sitter-python"]
lang-all = ["lang-popular"]

[lints]
workspace = true
