[package]
name = "rivet-core"
version = "0.1.0"
description = "Pure Rust analysis core for Rivet."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["complexity", "analysis", "tree-sitter", "agents"]
categories = ["development-tools"]

[features]
default = ["lang-popular"]
lang-popular = ["lang-rust", "lang-python"]
lang-all = ["lang-popular"]
lang-rust = ["dep:tree-sitter-rust"]
lang-python = ["dep:tree-sitter-python"]

[dependencies]
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }

[lints]
workspace = true
