[package]
name = "rivet-core"
version = "0.1.0"
description = "Pure Rust analysis core for Rivet."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["complexity", "analysis", "tree-sitter", "agents"]
categories = ["development-tools"]

[features]
default = ["lang-popular"]
plugins = ["dep:extism"]
lang-popular = [
  "lang-c",
  "lang-cpp",
  "lang-csharp",
  "lang-go",
  "lang-java",
  "lang-javascript",
  "lang-kotlin",
  "lang-php",
  "lang-python",
  "lang-ruby",
  "lang-rust",
  "lang-typescript",
]
lang-all = ["lang-popular", "lang-pack-provider"]
lang-pack-provider = []
lang-c = ["dep:tree-sitter-c"]
lang-cpp = ["dep:tree-sitter-cpp"]
lang-csharp = ["dep:tree-sitter-c-sharp"]
lang-go = ["dep:tree-sitter-go"]
lang-java = ["dep:tree-sitter-java"]
lang-javascript = ["dep:tree-sitter-javascript"]
lang-kotlin = ["dep:tree-sitter-kotlin-ng"]
lang-php = ["dep:tree-sitter-php"]
lang-rust = ["dep:tree-sitter-rust"]
lang-python = ["dep:tree-sitter-python"]
lang-ruby = ["dep:tree-sitter-ruby"]
lang-typescript = ["dep:tree-sitter-typescript"]

[dependencies]
extism = { workspace = true, optional = true }
globset.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-c = { workspace = true, optional = true }
tree-sitter-c-sharp = { workspace = true, optional = true }
tree-sitter-cpp = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-java = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-kotlin-ng = { workspace = true, optional = true }
tree-sitter-php = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-ruby = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }

[dev-dependencies]
insta = { version = "1.43.2", features = ["json", "redactions"] }
proptest = "1.9.0"

[lints]
workspace = true
