[package]
name = "rivet-lsp"
version = "0.1.0"
description = "LSP surface scaffold for Rivet."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["complexity", "analysis", "lsp"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
dashmap = "6.1.0"
futures = "0.3.31"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.48.0", features = [
  "io-std",
  "macros",
  "rt",
  "sync",
  "time",
] }
tower-lsp-server = "0.23.0"
rivet-core = { path = "../rivet-core", features = ["plugins"] }
rivet-runtime = { path = "../rivet-runtime" }

[dev-dependencies]
criterion = "0.5.1"
tower = "0.5.2"

[[bench]]
name = "cached_reads"
harness = false

[lib]
name = "rivet_lsp"
path = "src/lib.rs"

[[bin]]
name = "rivet-lsp"
path = "src/main.rs"

[lints]
workspace = true
