[package]
name = "rivet-mcp"
version = "0.1.0"
description = "MCP server for the Rivet code complexity analyzer."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "rivet_mcp"
path = "src/lib.rs"

[[bin]]
name = "rivet-mcp"
path = "src/main.rs"

[dependencies]
rivet-core = { path = "../rivet-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
