[package]
name = "rivet-mcp"
version = "0.1.0"
description = "MCP surface scaffold for Rivet."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["complexity", "analysis", "mcp"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
rmcp = { version = "1.2.0", features = [
  "client",
  "server",
  "macros",
  "schemars",
  "transport-io",
  "transport-async-rw",
] }
schemars = "1.2.1"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.49.0", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "rt",
  "sync",
] }
rivet-core = { path = "../rivet-core", features = ["plugins"] }
rivet-runtime = { path = "../rivet-runtime" }

[lib]
name = "rivet_mcp"
path = "src/lib.rs"

[[bin]]
name = "rivet-mcp"
path = "src/main.rs"

[lints]
workspace = true
