[package]
name = "rivet-node"
version = "0.1.0"
description = "Node binding scaffold for Rivet."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["complexity", "analysis", "node"]
categories = ["development-tools"]

[dependencies]
rivet-core = { path = "../rivet-core" }

[lib]
name = "rivet_node"
path = "src/lib.rs"

[lints]
workspace = true
