[package]
name = "rivet-node"
version = "0.1.0"
description = "Node binding scaffold for Rivet."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["complexity", "analysis", "node"]
categories = ["development-tools"]

[dependencies]
napi = { workspace = true, features = ["async", "serde-json"] }
napi-derive.workspace = true
serde_json.workspace = true
rivet-core = { path = "../rivet-core" }
rivet-runtime = { path = "../rivet-runtime" }

[build-dependencies]
napi-build.workspace = true

[lib]
name = "rivet_node"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true
