[package]
name = "rivet-plugin-sdk"
version = "0.1.0"
description = "Plugin SDK for the Rivet code complexity analyzer."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "rivet_plugin_sdk"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
