[package]
name = "rivet-python"
version = "0.1.0"
description = "Python bindings for the Rivet code complexity analyzer."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "rivet_python"
crate-type = ["cdylib", "rlib"]

[dependencies]
rivet-core = { path = "../rivet-core" }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
