[package]
name = "rivet-python"
version = "0.1.0"
description = "Python binding scaffold for Rivet."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["complexity", "analysis", "python"]
categories = ["development-tools"]

[dependencies]
rivet-core = { path = "../rivet-core" }
rivet-runtime = { path = "../rivet-runtime" }
pyo3.workspace = true

[build-dependencies]
pyo3-build-config.workspace = true

[features]
default = []
python-module = ["pyo3/extension-module"]

[lib]
name = "rivet_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true
