[package]
name = "rivet-runtime"
version = "0.1.0"
description = "Shared runtime support for Rivet consumer crates."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["complexity", "analysis", "runtime"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
globset.workspace = true
ignore.workspace = true
rivet-core = { path = "../rivet-core", features = ["plugins", "lang-all"] }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion = "0.5.1"

[lib]
name = "rivet_runtime"
path = "src/lib.rs"

[[bench]]
name = "cache_roundtrip"
harness = false

[lints]
workspace = true
